<resources>
    <string name="app_name">WareHouse</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_to_the_pick_packing_app">Welcome to the Pick Packing App</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_email_address">Enter an E-Mail Address</string>
    <string name="enter_valid_email_address">Enter a Valid E-mail Address</string>
    <string name="enter_a_password">Enter a Password</string>
    <string name="enter_more_symbol_password">Enter at least 6 Digit password</string>
    <string name="picking_status">Picking Status</string>
    <string name="basket">Basket</string>
    <string name="synch">Sync</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick">Pick</string>
    <string name="pending">Pending</string>
    <string name="pack">Pack</string>
    <string name="done">Done</string>
    <string name="last_synch_mock">Last synch 2 Feb</string>
    <string name="picking_packing">Picking Packing</string>
    <string name="inventory">Inventory</string>
    <string name="receipts">Receipts</string>
    <string name="internal_transfers">Internal transfers</string>
    <string name="other">Other</string>
    <string name="log_out">Log out</string>
    <string name="pick_packer">PICK PACKER</string>
    <string name="batch">BATCH #</string>
    <string name="status">STATUS</string>
    <string name="order">ORDER #</string>
    <string name="start">Start</string>
    <string name="continue_button">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="have_no_internet_connection">Have no internet connection</string>
    <string name="server_connection_error">Server connection error</string>
    <string name="connect_server_error">Have no server connect</string>
    <string name="ok">Ok</string>

    <string name="notification">Notification</string>
    <string name="not_available">N/A</string>
    <string name="prioirty">Prioirty</string>
    <string name="batch_number">Batch #</string>
    <string name="picking_status_toolbar">picking status</string>
    <string name="picking_instruction">Picking instruction</string>
    <string name="don_t_forget_to_check_if_the_handles_are_included_and_that_the_bag_is_clean">Don’t forget to check if the handles are included and that the bag is clean.</string>
    <string name="quantity">quantity</string>
    <string name="status_percent">Status %s\%%</string>
    <string name="revise">Revise</string>
    <string name="status_change_question">Are you sure, all entries will be made undone as well status change to TO DO</string>
    <string name="settings">Settings</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="bearer">Bearer</string>
    <string name="url_base">Url base</string>
    <string name="save">Save</string>
    <string name="all_changes_saved">All changes saved</string>
    <string name="an_error_occurred_while_saving">An error occurred while saving</string>
    <string name="quantity_picked">%s/%s</string>
    <string name="quantity_bin">%s/%s</string>
    <string name="bin_number">Bin #</string>
    <string name="carton_allocation">Carton #Allocation</string>
    <string name="remarks">Remarks</string>
    <string name="print_labels">Print labels</string>
    <string name="carton_number">Carton #%s</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="kg">KG</string>
    <string name="picking_location">Picking location</string>
    <string name="barcode">Barcode</string>
    <string name="picked">Picked</string>
    <string name="items_to_place_in_the_bucket">Items to place in the bucket</string>
    <string name="quantity_picked_items">Quantity picked items</string>


</resources>