<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       style="@style/HeadingOne"
       android:gravity="center"
       android:text="@string/items_to_place_in_the_bucket"/>

    <EditText
        android:id="@+id/itemEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:minEms="1"
        style="@style/EditText"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_marginTop="16dp"
        android:background="@color/white_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            style="@style/ButtonNegative"
            android:layout_gravity="start"
            android:text="@string/cancel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/done"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            style="@style/ButtonPositive"
            android:layout_gravity="end"
            android:text="@string/done" />

    </LinearLayout>


</LinearLayout>