<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="bearer"
            type="String" />
        <variable
            name="urlBase"
            type="String" />
        <variable
            name="SettingsViewModel"
            type="com.patstudio.warehouse.ui.container.settings.SettingsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BodyOne"
                android:gravity="start"
                android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua"/>

            <LinearLayout
                android:id="@+id/bearerContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SubTittleOne"
                    android:gravity="start"
                    android:textAllCaps="true"
                    android:text="@string/bearer"/>

                <EditText
                    android:id="@+id/bearer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{bearer}"
                    android:onTextChanged="@{(text, start, before, count) -> SettingsViewModel.setBearer(text)}"
                    android:imeOptions="actionNext"
                    style="@style/EditText" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/urlSeverContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SubTittleOne"
                    android:gravity="start"
                    android:textAllCaps="true"
                    android:text="@string/url_base"/>

                <EditText
                    android:id="@+id/urlServer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{urlBase}"
                    android:onTextChanged="@{(text, start, before, count) -> SettingsViewModel.setUrlBase(text)}"
                    android:imeOptions="actionNext"
                    style="@style/EditText" />

            </LinearLayout>

            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <FrameLayout
                android:id="@+id/actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login"
                    style="@style/ButtonPositive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"

                    android:onClick="@{(v) -> SettingsViewModel.selectSave(v)}"
                    android:text="@string/save" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</layout>