<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="model"
            type="com.patstudio.warehouse.data.models.CartonModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/light_green_rounded_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@{String.format(@string/carton_number, model.nr)}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    style="@style/BodyOne"
                    android:text="@string/length"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditTextWithoutBoarder"
                    android:text="@{String.valueOf(model.length)}"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:inputType="number"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    style="@style/BodyOne"
                    android:text="@string/width"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditTextWithoutBoarder"
                    android:text="@{String.valueOf(model.width)}"
                    android:gravity="center"
                    android:inputType="number"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    style="@style/BodyOne"
                    android:text="@string/height"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditTextWithoutBoarder"
                    android:text="@{String.valueOf(model.height)}"
                    android:gravity="center"
                    android:inputType="number"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    style="@style/BodyOne"
                    android:text="@string/kg"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditTextWithoutBoarder"
                    android:text="@{String.valueOf(model.weight)}"
                    android:gravity="center"
                    android:inputType="number"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>